force-app/main/default/objects/Account/fields/Count_of_10000_Opps__c.field-meta.xml
<CustomField>
    <fullName>Count_of_10000_Opps__c</fullName>
    <label>Count of 10000 Opps</label>
    <summaryFilterItems>
        <field>Opportunity.Amount</field>
        <operation>greaterThan</operation>
        <value>10000</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>