force-app/main/default/objects/Account/fields/Count_of_Opps__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Opps__c</fullName>
    <label>Count of Opps</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>