force-app/main/default/objects/Account/fields/IsStateCorrectFormatted__c.field-meta.xml
<CustomField>
    <fullName>IsStateCorrectFormatted__c</fullName>
    <formula>ISPICKVAL( Rating , &quot;Hot&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsRatingHot</label>
    <type>Checkbox</type>
</CustomField>