force-app/main/default/objects/Account/fields/Konum__c.field-meta.xml
<CustomField>
    <fullName>Konum__c</fullName>
    <label>Konum</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>