force-app/main/default/objects/Account/fields/Min_Probability__c.field-meta.xml
<CustomField>
    <fullName>Min_Probability__c</fullName>
    <label>Min Probability</label>
    <summarizedField>Opportunity.Probability</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>