force-app/main/default/objects/Account/fields/Sum_of_Opps__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Opps__c</fullName>
    <label>Sum of 2022 Opps</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2021</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>