force-app/main/default/objects/Account/validationRules/AccountNumberCanNot_BeChangedIF.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountNumberCanNot_BeChangedIF</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT ( ISBLANK( PRIORVALUE(AccountNumber)) )  &amp;&amp; 
ISCHANGED(AccountNumber), NOT(ISBLANK(AccountNumber)))</errorConditionFormula>
    <errorDisplayField>AccountNumber</errorDisplayField>
    <errorMessage>Account Number değiştirilemez, sadece boş ise veri girilebilir</errorMessage>
</ValidationRule>