force-app/main/default/objects/Account/validationRules/EmployeeCanNotBeNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>EmployeeCanNotBeNegative</fullName>
    <active>false</active>
    <errorConditionFormula>NumberOfEmployees &lt; 0</errorConditionFormula>
    <errorDisplayField>NumberOfEmployees</errorDisplayField>
    <errorMessage>Employee fieldi negatif değer alamaz. Lütfen pozitif değer girin.</errorMessage>
</ValidationRule>