force-app/main/default/objects/Account/validationRules/PhoneMustBe11Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneMustBe11Digits</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT(ISBLANK(Phone)), 
      OR ( LEN( Phone) &lt;&gt; 11,
          NOT(ISNUMBER(Phone)) 
         )
    )</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone, 11 haneli olmalıdır! Lütfen başında sıfır olmadan 11 haneli telefon bilgisini doğru formatta girin.
Örn: 5456521423</errorMessage>
</ValidationRule>