force-app/main/default/objects/Account/validationRules/Validation_Test.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Test</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  CONTAINS( &quot;Technology:Media:Retail&quot;, TEXT(Industry)) , ISBLANK( Website))</errorConditionFormula>
    <errorDisplayField>Website</errorDisplayField>
    <errorMessage>Industry Tech, retail ve Media ise websitesi boş olamaz</errorMessage>
</ValidationRule>